dataset1235/2025-2/2947369575/users/845574893/executions/1003782500_2383239197.log
== SUBMISSION (2025-08-27 22:51:23)
-- CODE: 
import math
a=float(input())
b=float(input())
gama=float(input())
gama_rad=math.radians(gama)
c=math.sqrt(a**2+b**2-2*a*b*math.cos(gama_rad))
print(round(c,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:50:41)
-- CODE: 
import math
a=float(input())
b=float(input())
gama=float(input())
gama_rad=math.radians(gama)
c=math.sqrt(a**2+b**2-2*s*b*math.cos(gama_rad))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c=math.sqrt(a**2+b**2-2*s*b*math.cos(gama_rad))
                            ^
NameError: name 's' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c=math.sqrt(a**2+b**2-2*s*b*math.cos(gama_rad))
                            ^
NameError: name 's' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c=math.sqrt(a**2+b**2-2*s*b*math.cos(gama_rad))
                            ^
NameError: name 's' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c=math.sqrt(a**2+b**2-2*s*b*math.cos(gama_rad))
                            ^
NameError: name 's' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c=math.sqrt(a**2+b**2-2*s*b*math.cos(gama_rad))
                            ^
NameError: name 's' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c=math.sqrt(a**2+b**2-2*s*b*math.cos(gama_rad))
                            ^
NameError: name 's' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
